seance session page layout bug crushed

--- a/css/style.scss
+++ b/css/style.scss
@@ -978,6 +978,11 @@ body#seance {
 			text-align: center;
 		}
 		
+		p {
+			margin-left: auto;
+			margin-right: auto;
+		}
+		
 		img {
 			float: right;
 			width: 45%;
